[package]
name = "hyper-body-utils"
version = "0.1.6-beta.5"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/hyper-body-utils"
homepage = "https://github.com/ararog/hyper-body-utils"
description = "Utilities for handling HTTP bodies with hyper"
readme = "README.md"
license = "MIT"
keywords = ["http", "hyper", "server", "client"]
publish = true
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tokio-rt"]

tokio-rt = [
  "tokio/fs",
  "tokio/rt-multi-thread",
  "tokio-util/io",
  "tokio/macros",
]

smol-rt = ["dep:smol", "dep:smol-macros", "dep:macro_rules_attribute"]

compio-rt = [
  "compio/macros",
  "compio/io-uring",
  "compio-io/bytes",
  "send_wrapper/futures",
  "dep:compio-fs",
]

http3 = ["dep:h3", "dep:h3-quinn"]

hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

[dependencies]
bytes = "1.11.1"
compio = { version = "0.18.0", optional = true, default-features = false }
compio-fs = { version = "0.11.0", optional = true, default-features = false }
compio-io = { version = "0.9.1", optional = true, default-features = false }
futures = { version = "0.3.32", optional = false, default-features = false }
h3 = { version = "0.0.8", optional = true, default-features = false }
h3-quinn = { version = "0.0.10", optional = true, default-features = false }
hotpath = "0.14.0"
http-body-util = "0.1.3"
hyper = "1.8.1"
macro_rules_attribute = { version = "0.2.2", optional = true, default-features = false }
send_wrapper = { version = "0.6.0", optional = true, default-features = false }
smol = { version = "2.0.2", optional = true, default-features = false }
smol-macros = { version = "0.1.1", optional = true, default-features = false }
tokio = { version = "1.50.0", optional = true, default-features = false }
tokio-util = { version = "0.7.18", optional = true, default-features = false }
